--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.5.8"
   },
   "version": "0.1.0",
   "devDependencies": {
